# rcup_base_jetson

./: 99-usb-serial.rules  command _list.txt  debug_data.txt  frames_2026-02-18_23.48.09.gv
RPLIDAR_RCUP/config/: front_lidar_filter.yaml  rear_lidar_filter.yaml
RPLIDAR_RCUP/launch/: view_sllidar_a2m8_launch.py
barrier_tape_addition/barrier_tape_addition/: tape_scan_node.py  zed_tilt_calc.py
interpret_odom/: setup.py
interpret_odom/config/: dead_wheel_w_imu.yaml  lidar_filter.yaml  localization_params_online_async.yaml  mapper_params_online_async.yaml  nav2_params.yaml
interpret_odom/interpret_odom/: serial_arbiter.py  tracking_dead_wheel_odom.py  zed_dynamic_link.py
interpret_odom/launch/: hardware.launch.py  mapping.launch.py  navigation_support_nodes.launch.py
laser_line_extraction_ros2/launch/: line_extraction.launch.py
laser_line_extraction_ros2/src/: line_extraction_ros.cpp
map_transforms_creator/: package.xml  setup.cfg  setup.py
map_transforms_creator/map_transforms_creator/: publish_shelves.py  save_shelves.py
map_transforms_creator/transforms/: shelves.yaml
serial_motor_demo/serial_motor_demo/: OpenLoop_controller.py  cmd_vel_to_pwm.py
shelf_aligner/: CMakeLists.txt  package.xml
shelf_aligner/src/: allign_to_shelf.cpp
